Stops scrolling in mobile toggle
scrollbar appearing and scrollable nav on mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -34,6 +34,9 @@ body {
         padding: 0;
         position: relative;
     }
+    @media @mobile {
+        overflow: inherit;
+    }
 }
 
 .zone-area {
